add_library(FP_fastI_v5t_LE STATIC IMPORTED GLOBAL)
set_target_properties(FP_fastI_v5t_LE PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/Mathlib/lib/FP_fastI_v5t_LE.a)

add_library(NITRO_Runtime_Ai_LE STATIC IMPORTED GLOBAL)
set_target_properties(NITRO_Runtime_Ai_LE PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/Runtime/Runtime_ARM/Runtime_NITRO/Lib/NITRO_Runtime_Ai_LE.a)

add_library(MSL_Extras_NITRO_Ai_LE STATIC IMPORTED GLOBAL)
set_target_properties(MSL_Extras_NITRO_Ai_LE PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/msl/MSL_Extras/MSL_ARM/Lib/MSL_Extras_NITRO_Ai_LE.a)

add_library(MSL_C_NITRO_Ai_LE STATIC IMPORTED GLOBAL)
set_target_properties(MSL_C_NITRO_Ai_LE PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/msl/MSL_C/MSL_ARM/Lib/MSL_C_NITRO_Ai_LE.a)

add_library(MSL_CPP_NITRO_Ai_LE STATIC IMPORTED GLOBAL)
set_target_properties(MSL_CPP_NITRO_Ai_LE PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/msl/MSL_C++/MSL_ARM/Lib/MSL_CPP_NITRO_Ai_LE.a)
