# libdwcgschat.a (BINARY ONLY)
add_subdirectory(chat)

# libdwcgscommon.a (BINARY ONLY)
add_subdirectory(common)

# libdwcgsghttp.a (BINARY ONLY)
add_subdirectory(ghttp)

# libdwcgp.a (BINARY ONLY)
add_subdirectory(gp)

# libdwcgsgstats.a (BINARY ONLY)
add_subdirectory(gstats)

# libdwcgt2.a (BINARY ONLY)
add_subdirectory(gt2)

# libdwcnatneg.a (BINARY ONLY)
add_subdirectory(natneg)

# libdwcgspinger.a (BINARY ONLY)
add_subdirectory(pinger)

# libdwcgspt.a (BINARY ONLY)
add_subdirectory(pt)

# libdwcgsqr2.a (BINARY ONLY)
add_subdirectory(qr2)

# libdwcgsserverbrowsing.a (BINARY ONLY)
add_subdirectory(serverbrowsing)